--- a/Backend/UserOrder/UserOrder/UserOrder/appsettings.json
+++ b/Backend/UserOrder/UserOrder/UserOrder/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "BandarKyaJaneAdKaSwad nach na jane angad tedha",
-    "Issuer": "BoughtIt.com"
+    "Key": "",
+    "Issuer": ""
   },
   "Authentication": {
     "Google": {
-      "ClientID": "562694772874-gtls3td36t2kq6ljt84ml0g18q3st49n.apps.googleusercontent.com",
-      "ClientSecret": "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",
+      "ClientID": "",
+      "ClientSecret": "",
       "RedirectUri": "http://localhost:4200/auth-complete"
     }
   },
@@ -22,9 +22,9 @@
     "RedisConnectionString": "localhost:6379"
   },
   "RabbitMQ": {
-    "HostName": "localhost",
-    "Username": "BoughtIt",
-    "Password": "BoughtIt@123"
+    "HostName": "",
+    "Username": "",
+    "Password": ""
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
